--- a/index.html
+++ b/index.html
@@ -472,6 +472,9 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subtitle-footer">підпишіться на розсилку</p>
+        </div>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
