--- a/index.html
+++ b/index.html
@@ -513,11 +513,11 @@
         </div>
         <div class="subscribe">
           <p class="subtitle-footer">підпишіться на розсилку</p>
-          <form>
+          <form class="form-footer">
             <label for="email"></label>
-            <input type="email" name="mail" id="email" placeholder="E-mail" />
+            <input class="footer-email" type="email" name="mail" id="email" placeholder="E-mail" />
 
-            <button type="submit">Підписатися</button>
+            <button class="subscribe-button cursor" type="submit">Підписатися</button>
           </form>
         </div>
       </div>
