--- a/index.html
+++ b/index.html
@@ -517,7 +517,12 @@
             <label for="email"></label>
             <input class="footer-email" type="email" name="mail" id="email" placeholder="E-mail" />
 
-            <button class="subscribe-button cursor" type="submit">Підписатися</button>
+            <button class="subscribe-button cursor" type="submit">
+              Підписатися
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
