додає новий свг, міняє футер в портфоліо . перед позиціонуванням

--- a/portfolio.html
+++ b/portfolio.html
@@ -335,7 +335,7 @@
           </address>
         </div>
         <div class="box-socials">
-          <h3 class="subtitle-footer">Приєднуйтесь</h3>
+          <p class="subtitle-footer">Приєднуйтесь</p>
           <ul class="list-hidden socials">
             <li class="link-socials">
               <a href="" class="socials-attention footer-attention">
@@ -366,6 +366,21 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe">
+          <p class="subtitle-footer">підпишіться на розсилку</p>
+          <form class="form-footer">
+            <label>
+              <input class="footer-email cursor" type="email" name="mail" placeholder="E-mail" />
+            </label>
+
+            <button class="subscribe-button cursor" type="submit">
+              Підписатися
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
