--- a/index.html
+++ b/index.html
@@ -78,23 +78,32 @@
 
                 <label class="form-field"
                   ><span class="form-info">Ім'я</span>
-                  <input class="form-input" type="text" name="user-name" />
+                  <input class="form-input cursor" type="text" name="user-name" />
+                  <svg width="18" height="18">
+                    <use href="./images/icons.svg#icon-person-black"></use>
+                  </svg>
                 </label>
 
                 <label class="form-field"
                   ><span class="form-info">Телефон</span>
-                  <input class="form-input" type="tel" name="tel" />
+                  <input class="form-input cursor" type="tel" name="tel" />
+                  <svg width="18" height="18">
+                    <use href="./images/icons.svg#icon-phone-black"></use>
+                  </svg>
                 </label>
 
                 <label class="form-field"
                   ><span class="form-info">Пошта</span>
-                  <input class="form-input" type="email" name="mail" />
+                  <input class="form-input cursor" type="email" name="mail" />
+                  <svg width="18" height="18">
+                    <use href="./images/icons.svg#icon-email-black"></use>
+                  </svg>
                 </label>
 
                 <label class="form-field"
                   ><span class="form-info">Коментар</span>
                   <textarea
-                    class="form-textarea"
+                    class="form-textarea cursor"
                     name="feedback"
                     rows="8"
                     placeholder="Введіть текст"
@@ -102,7 +111,7 @@
                 </label>
 
                 <div class="checkbox-stylization">
-                  <input type="checkbox" name="agreement" id="agreement" />
+                  <input class="cursor" type="checkbox" name="agreement" id="agreement" />
                   <label for="agreement"
                     >Погоджуюся з розсилкою та приймаю
                     <a class="link-agreement" href="">Умови договору</a></label
@@ -516,7 +525,7 @@
           <p class="subtitle-footer">підпишіться на розсилку</p>
           <form class="form-footer">
             <label>
-              <input class="footer-email" type="email" name="mail" placeholder="E-mail" />
+              <input class="footer-email cursor" type="email" name="mail" placeholder="E-mail" />
             </label>
 
             <button class="subscribe-button cursor" type="submit">
