--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <label class="form-field"
                   ><span class="form-info">Ім'я</span>
                   <input class="form-input cursor" type="text" name="user-name" />
-                  <svg width="18" height="18">
+                  <svg class="form-picture" width="18" height="18">
                     <use href="./images/icons.svg#icon-person-black"></use>
                   </svg>
                 </label>
@@ -87,7 +87,7 @@
                 <label class="form-field"
                   ><span class="form-info">Телефон</span>
                   <input class="form-input cursor" type="tel" name="tel" />
-                  <svg width="18" height="18">
+                  <svg class="form-picture" width="18" height="18">
                     <use href="./images/icons.svg#icon-phone-black"></use>
                   </svg>
                 </label>
@@ -95,7 +95,7 @@
                 <label class="form-field"
                   ><span class="form-info">Пошта</span>
                   <input class="form-input cursor" type="email" name="mail" />
-                  <svg width="18" height="18">
+                  <svg class="form-picture" width="18" height="18">
                     <use href="./images/icons.svg#icon-email-black"></use>
                   </svg>
                 </label>
