--- a/index.html
+++ b/index.html
@@ -111,12 +111,27 @@
                 </label>
 
                 <div class="checkbox-stylization">
-                  <input class="cursor" type="checkbox" name="agreement" id="agreement" />
+                  <input class="checkbox cursor" type="checkbox" name="agreement" id="agreement" />
+                  <svg class="form-check cursor" width="16" height="15">
+                    <use href="./images/icons.svg#icon-full-check"></use>
+                  </svg>
                   <label for="agreement"
                     >Погоджуюся з розсилкою та приймаю
                     <a class="link-agreement" href="">Умови договору</a></label
                   >
                 </div>
+
+                <!-- <label class="checkbox-stylization">
+                  <input class="checkbox cursor" type="checkbox" name="agreement" />
+                  <svg class="form-check cursor" width="16" height="15">
+                    <use href="./images/icons.svg#icon-full-check"></use>
+                  </svg>
+                  <span
+                    >Погоджуюся з розсилкою та приймаю<a class="link-agreement" href=""
+                      >Умови договору</a
+                    ></span
+                  >
+                </label> -->
 
                 <button class="form-button cursor" type="submit">Відправити</button>
               </form>
