--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   ></textarea>
                 </label>
 
-                <div class="checkbox-stylization">
+                <!-- <div class="checkbox-stylization">
                   <input class="checkbox cursor" type="checkbox" name="agreement" id="agreement" />
                   <svg class="form-check cursor" width="16" height="15">
                     <use href="./images/icons.svg#icon-full-check"></use>
@@ -119,9 +119,9 @@
                     >Погоджуюся з розсилкою та приймаю
                     <a class="link-agreement" href="">Умови договору</a></label
                   >
-                </div>
+                </div> -->
 
-                <!-- <label class="checkbox-stylization">
+                <label class="checkbox-stylization">
                   <input class="checkbox cursor" type="checkbox" name="agreement" />
                   <svg class="form-check cursor" width="16" height="15">
                     <use href="./images/icons.svg#icon-full-check"></use>
@@ -131,7 +131,7 @@
                       >Умови договору</a
                     ></span
                   >
-                </label> -->
+                </label>
 
                 <button class="form-button cursor" type="submit">Відправити</button>
               </form>
