--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   <svg class="form-check cursor" width="16" height="15">
                     <use href="./images/icons.svg#icon-full-check"></use>
                   </svg>
-                  <span
+                  <span class="checkbox-text"
                     >Погоджуюся з розсилкою та приймаю<a class="link-agreement" href=""
                       >Умови договору</a
                     ></span
