Виконує чекбокс в модалці та задає трансишн до всіх елементів

--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
               </svg>
             </button>
             <div class="user-data">
+              <p class="modal-caption">Залиште свої дані, ми вам передзвонимо</p>
               <form class="form">
-                <p class="modal-caption">Залиште свої дані, ми вам передзвонимо</p>
-
                 <label class="form-field"
                   ><span class="form-info">Ім'я</span>
                   <input class="form-input cursor" type="text" name="user-name" />
@@ -110,23 +109,12 @@
                   ></textarea>
                 </label>
 
-                <!-- <div class="checkbox-stylization">
-                  <input class="checkbox cursor" type="checkbox" name="agreement" id="agreement" />
-                  <svg class="form-check cursor" width="16" height="15">
-                    <use href="./images/icons.svg#icon-full-check"></use>
-                  </svg>
-                  <label for="agreement"
-                    >Погоджуюся з розсилкою та приймаю
-                    <a class="link-agreement" href="">Умови договору</a></label
-                  >
-                </div> -->
-
                 <label class="checkbox-stylization">
                   <input class="checkbox cursor" type="checkbox" name="agreement" />
                   <svg class="form-check cursor" width="16" height="15">
                     <use href="./images/icons.svg#icon-full-check"></use>
                   </svg>
-                  <span class="checkbox-text"
+                  <span class="checkbox-text cursor"
                     >Погоджуюся з розсилкою та приймаю<a class="link-agreement" href=""
                       >Умови договору</a
                     ></span
