--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
 
                 <label class="checkbox-stylization">
                   <input class="checkbox cursor" type="checkbox" name="agreement" />
-                  <svg class="form-check cursor" width="16" height="15">
-                    <use href="./images/icons.svg#icon-full-check"></use>
-                  </svg>
+                  <span class="check-container">
+                    <svg class="form-check cursor" width="16" height="15">
+                      <use href="./images/icons.svg#icon-full-check"></use>
+                    </svg>
+                  </span>
                   <span class="checkbox-text cursor"
                     >Погоджуюся з розсилкою та приймаю<a class="link-agreement" href=""
                       >Умови договору</a
